--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-        <script type="text/javascript" src="phaser.min.js"></script>
-        <script type="text/javascript" src="scene1.js"></script>
-        <script type="text/javascript" src="scene2.js"></script>
-        <script type="text/javascript" src="game.js"></script>
-    </head>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <link rel="stylesheet" href="styles.css">
+  <title>Pong</title>
+ 
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div class="box">
+  <div id="game"></div>
+</div>
+  <script src="./phaser.min.js"></script>
+  <script src="./game.js"></script>
+
+  <div class="container">  
+  <p><input type="button" class="button-19" value="Refresh after each point!" onclick="refreshPage()" /></p>
+  </div>
+</body>
+
 </html>
